# C2ME-fabric

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  test-modpack.yml  test.yml
buildSrc/: build.gradle
c2me-base/: build.gradle
c2me-base/src/main/resources/: c2me-base.accesswidener  c2me-base.mixins.json  fabric.mod.json
c2me-client-uncapvd/src/main/resources/: c2me-client-uncapvd.accesswidener  c2me-client-uncapvd.mixins.json  fabric.mod.json
c2me-fixes-chunkio-threading-issues/src/main/resources/: c2me-fixes-chunkio-threading-issues.mixins.json  fabric.mod.json
c2me-fixes-general-threading-issues/src/main/resources/: c2me-fixes-general-threading-issues.mixins.json  fabric.mod.json
c2me-fixes-worldgen-threading-issues/src/main/resources/: c2me-fixes-worldgen-threading-issues.accesswidener  c2me-fixes-worldgen-threading-issues.mixins.json  fabric.mod.json
c2me-fixes-worldgen-vanilla-bugs/src/main/resources/: c2me-fixes-worldgen-vanilla-bugs.mixins.json  fabric.mod.json
c2me-natives-opts/: .gitignore  build.gradle  gradle.properties
c2me-natives-opts/src/main/resources/: c2me-native-opts.mixins.json  c2me-natives-opts.accesswidener  c2me-natives-opts.mixins.json  fabric.mod.json
c2me-natives-opts/src/natives/c/: density_functions.c  init.c  noise.c  perlin_noise_sampler.c  simplex_noise_sampler.c
c2me-natives-opts/src/natives/include/: common_maths.h  density_functions.h  noise.h
c2me-natives-opts/src/natives/includes/: common_maths.h
c2me-notickvd/src/main/resources/: c2me-notickvd.accesswidener  c2me-notickvd.mixins.json  fabric.mod.json
c2me-opts-allocs/src/main/resources/: c2me-opts-allocs.accesswidener  c2me-opts-allocs.mixins.json  fabric.mod.json
c2me-opts-chunk-access/src/main/resources/: c2me-opts-chunk-access.accesswidener  c2me-opts-chunk-access.mixins.json  fabric.mod.json
c2me-opts-chunk-serializer/: build.gradle
c2me-opts-chunk-serializer/src/main/resources/: c2me-opts-chunk-serializer.accesswidener  c2me-opts-chunk-serializer.mixins.json  fabric.mod.json
c2me-opts-chunkio/src/main/resources/: c2me-opts-chunkio.accesswidener  c2me-opts-chunkio.mixins.json  fabric.mod.json
c2me-opts-dfc/src/main/resources/: c2me-opts-dfc.mixins.json  fabric.mod.json
c2me-opts-math/src/main/resources/: c2me-opts-math.accesswidener  c2me-opts-math.mixins.json  fabric.mod.json
c2me-opts-natives-math/: build.gradle
c2me-opts-natives-math/src/c/: CMakeLists.txt  exports.c  exports_x86_64_nogather.c  flibc.c  freestanding_workarounds.c  system_isa_aarch64.c  system_isa_x86_64.c
c2me-opts-natives-math/src/c/includes/: ext_math.h  target_macros.h
c2me-opts-natives-math/src/c/targets/: darwin-x86_64.cmake  linux-aarch_64.cmake  linux-x86_64.cmake  windows-x86_64.cmake
c2me-opts-natives-math/src/main/resources/: c2me-opts-natives-math.mixins.json  fabric.mod.json
c2me-opts-scheduling/src/main/resources/: c2me-opts-scheduling.accesswidener  c2me-opts-scheduling.mixins.json  fabric.mod.json
c2me-opts-worldgen-general/src/main/resources/: c2me-opts-worldgen-general.accesswidener  c2me-opts-worldgen-general.mixins.json  fabric.mod.json
c2me-opts-worldgen-vanilla/: build.gradle
c2me-opts-worldgen-vanilla/src/main/resources/: c2me-opts-worldgen-vanilla.accesswidener  c2me-opts-worldgen-vanilla.mixins.json  fabric.mod.json
c2me-rewrites-chunk-serializer/src/main/java/: StructureFeatureMixin.java
c2me-rewrites-chunk-serializer/src/main/resources/: c2me-rewrites-chunk-serializer.accesswidener  c2me-rewrites-chunk-serializer.mixins.json  fabric.mod.json
c2me-rewrites-chunk-system/src/main/resources/: c2me-rewrites-chunk-system.mixins.json  fabric.mod.json
c2me-rewrites-chunkio/: build.gradle
c2me-rewrites-chunkio/src/main/resources/: c2me-rewrites-chunkio.accesswidener  c2me-rewrites-chunkio.mixins.json  fabric.mod.json
c2me-server-utils/: build.gradle
c2me-server-utils/src/main/resources/: c2me-server-utils.mixins.json  fabric.mod.json
c2me-threading-chunkio/: build.gradle
c2me-threading-chunkio/src/main/resources/: c2me-threading-chunkio.mixins.json  fabric.mod.json
c2me-threading-lighting/: build.gradle
c2me-threading-lighting/src/main/resources/: c2me-threading-lighting.mixins.json  fabric.mod.json
c2me-threading-scheduling/src/main/resources/: c2me-threading-scheduling.mixins.json  fabric.mod.json
c2me-threading-worldgen/: build.gradle
c2me-threading-worldgen/src/main/resources/: fabric.mod.json  (+2 more)
compatibility/: build.gradle
compatibility/betterend/: build.gradle
compatibility/betternether/: build.gradle
compatibility/charm/: build.gradle
compatibility/terra/: build.gradle
compatibility/thebumblezone/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
libs/: build.gradle
src/main/resources/: C2ME.mixins.json  barium.accesswidener  barium.mixins.json  c2me-asm.mixins.json  c2me-compat.mixins.json  c2me.accesswidener  c2me.client.mixins.json  c2me.mixins.json  default-c2me.toml  fabric.mod.json
tests/: build.gradle
tests/c2me-aof-devlaunch/: build.gradle
tests/c2me-aof-test/: build.gradle
tests/c2me-modpack-devlaunch/: build.gradle
tests/c2me-modpack-test/: build.gradle
tests/c2me-test/: build.gradle
tests/vanilla-modpack-test/: build.gradle
tests/vanilla-test/: build.gradle
tests/world-diff/: build.gradle
(+1331 files in other folders)
